prevent overflow of buttons on manager, add more tooltips, change button css, remove import button

--- a/content/manager.css
+++ b/content/manager.css
@@ -113,24 +113,62 @@ table.table1{
     content : url(chrome://pagesigner/content/check.png)
 }
 
-button{
+
+
+/*button{
     margin: 0px;
     padding: 0px;
     font-family:Lucida Sans MS, Tahoma;
     font-size: 12px;
     color: #000; 
     white-space:nowrap;
-    width:auto;
+    width:95%;
     overflow:visible;
-    height:35px;
+    height:auto;
 }
 
+*/
+
+
+
+button {
+   border-top: 1px solid #97f7b1;
+   background: #5ec73b;
+   background: -webkit-gradient(linear, left top, left bottom, from(#0b912b), to(#5ec73b));
+   background: -webkit-linear-gradient(top, #0b912b, #5ec73b);
+   background: -moz-linear-gradient(top, #0b912b, #5ec73b);
+   background: -ms-linear-gradient(top, #0b912b, #5ec73b);
+   background: -o-linear-gradient(top, #0b912b, #5ec73b);
+   padding: 5px 10px;
+   -webkit-border-radius: 8px;
+   -moz-border-radius: 8px;
+   border-radius: 8px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 13px;
+   font-family: Georgia, serif;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+button:hover {
+   border-top-color: #0d6309;
+   background: #0d6309;
+   color: #ede6ed;
+   }
+button:active {
+   border-top-color: #1b435e;
+   background: #1b435e;
+   }
+   
 button em{
-    vertical-align:middle;
+    /*vertical-align:middle;
     margin:0 2px;
     display:inline-block;
     width:24px;
-    height:24px;
+    height:auto;*/
     background-image: url(chrome://pagesigner/content/refresh.png);      
 }
 
